# Enki-AI

./: .env.example  .env.template  .gitignore  BECKEND START AND CLOSE FINAL.bat  Backend Start.bat  DATABASE_README.md  Dockerfile  JARVIS V0.01.py  JARVIS V0.04 (Error Handling).py  Jarvis v0.05.py  LICENSE  LICENSE-CC  LICENSE-CC-BY-NC-4.0  LICENSE-LSPL.md  README.md  Sovereign_Manifest.txt  Stop_Assistant.bat  VOLUME TESt.py  YTes volume.py  asdadad.py  assistant.py  check_cuda.py  debug_printer_connection.py  facebook_page_scraper.py  fb_state.json  form_submission_example.html  form_submissions.db  hand_gesture_test.py  index.html  ingest_mission_data.py  jarvis_database.py  jarvis_gui.py  jarvis_gui_v2.py  odin_data_loader.py  package-lock.json  package.json  piper_tts.py  pyproject.toml  requirements.txt  run.py  (+7 more)
archive/: JARVIS V0.02.py  Jarvis V 0.03.py  V.0.06.py  debug_mdns.py  form_api.py  grep_trace.py  jarvis_gui_cyberpunk.py  jarvis_piper_tts_draft.py  read_trace.py  temp_cad_gen.py  test.py  test_cad_install.py  web_server_root.py
backend/: README.md  ada.py  authenticator.py  hand_movement.py  kasa_agent.py  printer_agent.py  project_manager.py  server.py  temp_cad_gen.py  tools.py  verify_cad.py  verify_iteration_mock.py  web_agent.py
docs/: Bridge concept offer.html  CASSAI GRoup OUTLINE.html  Debuf backend start.bat  Website Coding (HTML)  start_assistant.bat
electron/: main.js
enki/: __init__.py  __main__.py
enki_ai/: genesis_launch.py
game_engine/: biodome_engine.py  bounty_board.py  build_status.py  cryo_monitor.py  cyber_ghost.py  (+12 more)
(+89 files in other folders)
