[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enki-ai"
version = "0.1.0"
description = "Enki AI — a universal, extensible AI assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.scripts]
enki = "enki.cli.interface:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["enki*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
